riscv-rt/tests/ui/exception/fail_empty_macro.stderr
error: `#[exception]` attribute expects a path to a variant of an enum that implements the riscv_rt :: ExceptionNumber trait.
 --> tests/ui/exception/fail_empty_macro.rs:1:1
  |
1 | #[riscv_rt::exception]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `riscv_rt::exception` (in Nightly builds, run with -Z macro-backtrace for more info)
